===============================================================================
ProTrekkr releases history
===============================================================================

v2.8.3 PRE 3

- Added an option to automatically restore old position after step play.

v2.8.3 PRE 2

- Fullscreen mode resolution can now be selected.
- Added 4 parametrable filters for stereo delay.
- New effects:
  - 2D: Set stereo delay filter type.
  - 2E: Set stereo delay filter cutoff.
  - 2F: Set stereo delay filter resonance.
- Midi data range is now correctly scaled: row data of FF will be sent as 127.
- Ptk now sends Midi start/cont/stop and Midi clock events.
- Added 2 functions in sequencer to move a position up or down.
- Global volumes of channels are now also used for midi notes.
- Added a sequencer function to remap/swap and change effects numbers & values.
- Fixed a couple of bugs with notes transpose functions.
- Tracker and replay speeded up.
- Removed splines, channels can now be individually denoised (or not)
  due to this, this effect have been added:
  - 30: Control channel denoising strength (see manual for parameter infos).
- Renamed Mac OS 64 bit distrib from ia64 to x86_64 (and x86 to x86_32).
- Fixed a crash at startup in some Mac OS versions.
- MorphOS version is now officially supported.

v2.8.2

- Patterns wouldn't scroll sometimes when starting to play, fixed.
- Note volume from channels (volume columns and effects 03) are now handled
  in the velocity sent to midi output.
- Changed LCTRL + F1 / F2 (Decrease / Increase editing step)
  to LCTRL + F2 / F4 due to Mac OS "interfering".
- Fixed Midi handling on Linux and Mac OS.
- Fixed the keyboard shortcuts on Mac OS.
- Typos in the manual: Transpose to 1 octave higher shortcuts
  are LCTRL + K and LCTRL + LSHIFT + K.
- Replaced pink noise with triangle waveform in synth.
- White noise is now twice as loud to be on par with other waveforms loudness.
- Added a function to hard sync OSC 1 to OSC 2.