@@ -1,5 +1,5 @@
 cd release/distrib/
-zip -vr ptk_v2.8.3_PRE_2_aros_x86.zip * -x@//exclude_aros.lst
+zip -vr ptk_v2.8.3_PRE_3_aros_x86.zip * -x@//exclude_aros.lst
 cd /
 cd /
 
