@@ -1,5 +1,5 @@
 cd release/distrib/
-zip -vr ptk_v2.8.3_PRE_2_freebsd.zip * -x@../../exclude_freebsd.lst
+zip -vr ptk_v2.8.3_PRE_3_freebsd.zip * -x@../../exclude_freebsd.lst
 cd ..
 cd ..
 
