@@ -1,5 +1,5 @@
 cd release/distrib/
-zip -vr ptk_v2.8.3_PRE_2_linux.zip * -x@../../exclude_linux.lst
+zip -vr ptk_v2.8.3_PRE_3_linux.zip * -x@../../exclude_linux.lst
 cd ..
 cd ..
 
