@@ -1,4 +1,4 @@
 cd release/distrib/
-zip -vr ptk_v2.8.3_PRE_2_macos_arm64.zip * -x@../../exclude_macos_arm64.lst
+zip -vr ptk_v2.8.3_PRE_3_macos_arm64.zip * -x@../../exclude_macos_arm64.lst
 cd ..
 cd ..
