@@ -1,4 +1,4 @@
 cd release/distrib/
-zip -vr ptk_v2.8.3_PRE_2_macosx_ppc.zip * -x@../../exclude_macosx_ppc.lst
+zip -vr ptk_v2.8.3_PRE_3_macosx_ppc.zip * -x@../../exclude_macosx_ppc.lst
 cd ..
 cd ..
