@@ -1,5 +1,4 @@
 cd release/distrib/
-zip -vr ptk_v2.8.3_PRE_2_mos.zip * -x@//exclude_mos.lst
+lha -ar r ptk_v2.8.3_PRE_3_mos.lha #?
 cd /
 cd /
-
