@@ -1,5 +1,5 @@
 cd release/distrib/
-zip -vr ptk_v2.8.3_PRE_2_netbsd_amd64.zip * -x@../../exclude_netbsd.lst
+zip -vr ptk_v2.8.3_PRE_3_netbsd_amd64.zip * -x@../../exclude_netbsd.lst
 cd ..
 cd ..
 
