@@ -1,5 +1,5 @@
 cd release\distrib\
-..\..\zip -vr ptk_v2.8.3_PRE_2_windows.zip * -x@..\..\exclude_windows.lst
+..\..\zip -vr ptk_v2.8.3_PRE_3_windows.zip * -x@..\..\exclude_windows.lst
 cd ..
 cd ..
 
